# silk-codec

./: README.md  settings.gradle
app/: build.gradle
app/libs/: silkcodec-release.aar
app/src/androidTest/java/com/hzw/silkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: mshx_a.amr
app/src/main/java/com/hzw/silkdemo/: App.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hzw/silkdemo/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
silkcodec/: build.gradle
silkcodec/src/main/cpp/: CMakeLists.txt  native-lib.cpp
silkcodec/src/main/cpp/src/: index.cpp  index.h
silkcodec/src/main/java/com/hzw/silkcodec/: Codec.java  ContextUtils.java  FileUtils.java  NativeLib.java
